# jpv

./: .gitignore  Cargo.toml  Kick.toml  LICENSE-MIT  Makefile  README.md  Trunk.toml
.github/workflows/: ci.yml  release.yml  weekly.yml
crates/app/: Cargo.toml
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/jpt/: Cargo.toml
crates/jpt/src/: main.rs
crates/jpv/: Cargo.toml  README.md  build.rs
crates/jpv-lib/: Cargo.toml  README.md
crates/jpv-lib/src/: api.rs  concat.rs  config.rs  dirs.rs  entities.rs  furigana.rs  kana.rs  lib.rs  morae.rs  musli.rs  priority.rs  reporter.rs  romaji.rs  search.rs  sort_key.rs  token.rs
crates/jpv-lib/src/data/: buf.rs  mmap.rs  mod.rs
crates/jpv-lib/src/database/: analyze_glossary.rs  mod.rs  search_parser.rs  stored.rs
crates/jpv-lib/src/furigana/: mod.rs  tests.rs
crates/jpv-lib/src/inflection/: conjugate.rs  godan.rs  macros.rs  mod.rs
crates/jpv-lib/src/jmdict/: elements.rs  empty.rs  entry.rs  example_sentence.rs  example_source.rs  gloss.rs  mod.rs  parser.rs  reading_element.rs  sense.rs  source_language.rs  text.rs
crates/jpv-lib/src/jmnedict/: elements.rs  mod.rs  parser.rs
crates/jpv-lib/src/kana/: classify.rs  mod.rs
crates/jpv-lib/src/kanjidic2/: character.rs  code_point.rs  dictionary_reference.rs  elements.rs  meaning.rs  misc.rs  mod.rs  parser.rs  query_code.rs  radical.rs  reading.rs  reading_meaning.rs  variant.rs
crates/jpv-lib/src/kradfile/: mod.rs
crates/jpv-lib/src/romaji/: table.rs  tests.rs
crates/jpv-tesseract/: Cargo.toml  README.md
crates/jpv-tesseract/src/: dll.rs  error.rs  fake.rs  lib.rs  linked.rs
crates/jpv/res/: dialog.xcf
crates/jpv/src/: background.rs  config.rs  dirs.rs  hash.rs  log.rs  main.rs  reporter.rs  system.rs  tasks.rs
crates/jpv/src/command/: build.rs  cli.rs  mod.rs  send_clipboard.rs  service.rs
crates/jpv/src/database/: buf.rs  bundle.rs  file_system.rs  mmap.rs  mod.rs
crates/jpv/src/dbus/: fake.rs  mod.rs  real.rs
crates/jpv/src/open_uri/: mod.rs
crates/jpv/src/system/: dbus.rs  generic.rs
crates/jpv/src/web/: api.rs  bundle.rs  json.rs  mod.rs  ws.rs
crates/jpv/src/windows/: fake.rs  mod.rs  real.rs
crates/lib/: Cargo.toml
crates/lib/src/: adjective.rs  api.rs  concat.rs  conjugation.rs  database.rs  elements.rs  entities.rs  furigana.rs  inflection.rs  kana.rs  lib.rs  musli.rs  priority.rs  romaji.rs  serde.rs  verb.rs
crates/lib/src/database/: file.rs  index.rs  mod.rs  string_indexer.rs  strings.rs
crates/lib/src/elements/: empty.rs  entry.rs  example.rs  example_sentence.rs  example_source.rs  gloss.rs  kanji_element.rs  reading_element.rs  sense.rs  source_language.rs  text.rs
crates/lib/src/elements/example/: example_sent.rs  example_source.rs
crates/lib/src/furigana/: tests.rs
crates/lib/src/inflection/: conjugate.rs  godan.rs  macros.rs  mod.rs
crates/lib/src/jmdict/: entry.rs  example.rs  kanji_element.rs
crates/lib/src/kanjidic2/: array.rs  character.rs  code_point.rs  code_point_array.rs  dictionary_reference.rs  dictionary_reference_array.rs  header.rs  meaning.rs  misc.rs  mod.rs  parser.rs  query_code.rs  query_code_array.rs  radical.rs  radical_array.rs  reading.rs  reading_meaning.rs  rmgroup.rs  text.rs  variant.rs
crates/lib/src/romaji/: chars.rs  table.rs  tests.rs
crates/lib/src/verb/: godan.rs  macros.rs  mod.rs
crates/owned/: Cargo.toml
crates/owned-macros/: Cargo.toml
crates/owned-macros/src/: attr.rs  ctxt.rs  implement.rs  lib.rs
crates/owned/src/: borrow.rs  lib.rs  to_owned.rs
crates/owned/tests/: build_enum.rs  build_struct.rs  multiple_lifetimes.rs
crates/owned/tests/ui/: lifetime_hint.rs  lifetime_hint.stderr
crates/tools/: Cargo.toml
crates/web/: Cargo.toml  index.html
crates/web/src/: callbacks.rs  components.rs  error.rs  fetch.rs  main.rs  query.rs  ws.rs
crates/web/src/components/: analyze_toggle.rs  character.rs  config.rs  edit_index.rs  entry.rs  kanji_details.rs  mod.rs  name.rs  prompt.rs  tools.rs
crates/web/style/: style.scss
desktop/: se.tedro.JapaneseDictionary.desktop  se.tedro.JapaneseDictionary.service  se.tedro.JapaneseDictionary.xcf  se.tedro.japanese-dictionary.plugins.gschema.xml
extension/: .gitignore  Makefile  README.md  jpv.js  manifest.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
extension/background/: background.ts
extension/content_scripts/: boundaries.ts  index.css  index.ts  pinger.ts  utils.ts
extension/js/: boundaries.js
extension/lib/: compat.ts  lib.ts
extension/manifests/: manifest-chrome.json  manifest-ff.json
extension/pages/: options.html  options.ts  pages.css  popup.html  popup.ts
extension/popup/: popup.css  popup.html  popup.ts
extension/src/: boundaries.ts  jpv.ts
gnome/jpv@tedro.se/: extension.js  metadata.json  stylesheet.css
src/: composite.rs  concat.rs  elements.rs  entities.rs  furigana.rs  kana.rs  lib.rs  main.rs  parser.rs  priority.rs  verb.rs
src/elements/: entry.rs  example.rs  gloss.rs  kanji_element.rs  reading_element.rs  sense.rs  source_language.rs
src/elements/example/: example_sent.rs
src/furigana/: tests.rs
src/kana/: tests.rs
tools/: fedora-install
wix/: jpv.wxs  license.rtf  main.wxs
