[package]
name = "backend"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
tokio = { version = "1.28.0", features = ["full"] }
lib = { path = "../lib" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.160", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive"] }
