[package]
name = "jpv-lib"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
fixed-map = { version = "0.9.3", features = ["serde"] }
log = "0.4.20"
musli = "0.0.90"
musli-storage = "0.0.90"
musli-zerocopy = "0.0.90"
relative-path = "1.9.0"
serde = { version = "1.0.189", features = ["derive"] }
tracing = "0.1.40"
xmlparser = "0.13.6"
borrowme = "0.0.14"
thiserror = "1.0.50"
