[package]
name = "jpv-lib"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.74"
description = "Japanese Dictionary by John-John Tedro"
documentation = "https://docs.rs/jpv"
readme = "README.md"
homepage = "https://github.com/udoprog/jpv"
repository = "https://github.com/udoprog/jpv"
license = "MIT OR Apache-2.0"
keywords = ["dictionary"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.75"
fixed-map = { version = "0.9.3", features = ["serde"] }
log = "0.4.20"
musli = "0.0.92"
musli-storage = "0.0.92"
musli-zerocopy = "0.0.92"
relative-path = "1.9.0"
serde = { version = "1.0.189", features = ["derive"] }
tracing = "0.1.40"
xmlparser = "0.13.6"
borrowme = "0.0.14"
thiserror = "1.0.50"
directories = "5.0.1"
toml = "0.8.8"
serde_json = "1.0.108"

[target.'cfg(any(unix, windows))'.dependencies]
memmap = { version = "0.7.0", optional = true }
