[package]
name = "jpv-tesseract"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = "Japanese Dictionary by John-John Tedro"
documentation = "https://docs.rs/jpv"
readme = "README.md"
homepage = "https://github.com/udoprog/jpv"
repository = "https://github.com/udoprog/jpv"
license = "MIT OR Apache-2.0"
keywords = ["dictionary"]
categories = ["development-tools"]

[features]
linked = ["dep:tesseract-sys"]

[dependencies]
thiserror = "1.0.50"

[target.'cfg(unix)'.dependencies]
tesseract-sys = { version = "0.6.1", optional = true }

[target.'cfg(windows)'.dependencies]
winctx = "0.0.18"
libloading = "0.8.1"
