[package]
name = "jpv"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Japanese Dictionary by John-John Tedro"
default-run = "jpv"

[features]
default = ["build"]
bundle = ["rust-embed", "mime_guess"]
build = ["reqwest"]
gnome = ["dbus", "gio"]

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.33.0", features = ["full"] }
lib = { package = "jpv-lib", path = "../jpv-lib" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.189", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["cors"] }
musli-zerocopy = { version = "0.0.90" }

rust-embed = { version = "8.0.0", optional = true }
mime_guess = { version = "2.0.4", optional = true }
async-fuse = { version = "0.11.4", features = ["futures-core"] }
webbrowser = "0.8.12"
futures = "0.3.29"
serde_json = "1.0.108"
flate2 = "1.0.28"
directories = "5.0.1"
reqwest = { version = "0.11.22", optional = true }

[target.'cfg(unix)'.dependencies]
memmap = "0.7.0"
dbus = { version = "0.9.7", optional = true }
gio = { version = "0.18.3", optional = true }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/jpv", dest = "/usr/bin/", mode = "755" },
    { source = "desktop/se.tedro.JapaneseDictionary.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "desktop/se.tedro.JapaneseDictionary.png", dest = "/usr/share/icons/hicolor/256x256/apps/", mode = "644" },
    { source = "desktop/se.tedro.JapaneseDictionary.service", dest = "/usr/share/dbus-1/services/", mode = "644" },
    { source = "desktop/se.tedro.japanese-dictionary.plugins.gschema.xml", dest = "/usr/share/glib-2.0/schemas/", mode = "644" },
    { source = "gnome/jpv@tedro.se/*", dest = "/usr/share/gnome-shell/extensions/jpv@tedro.se/", mode = "644" },
]
