[package]
name = "jpv"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = "Japanese Dictionary by John-John Tedro"
documentation = "https://docs.rs/jpv"
readme = "README.md"
homepage = "https://github.com/udoprog/jpv"
repository = "https://github.com/udoprog/jpv"
license = "MIT OR Apache-2.0"
keywords = ["dictionary"]
categories = ["development-tools"]

default-run = "jpv"

[features]
default = ["reqwest", "memmap", "tesseract/linked"]
bundle = ["rust-embed", "mime_guess"]
gnome = ["gio", "dbus"]
memmap = ["lib/memmap"]
cli = []
dbus = ["dep:tokio-dbus"]

[dependencies]
lib = { package = "jpv-lib", path = "../jpv-lib" }
tesseract = { package = "jpv-tesseract", path = "../jpv-tesseract" }
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
bytes = "1.6.0"
mime = "0.3.17"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.189", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["cors"] }
musli = "0.0.117"
musli-zerocopy = "0.0.117"
musli-storage = "0.0.117"
musli-json = "0.0.117"
musli-utils = "0.0.117"

fixed-map = { version = "0.9.3", features = ["serde"] }
rust-embed = { version = "8.0.0", optional = true }
mime_guess = { version = "2.0.4", optional = true }
async-fuse = { version = "0.11.4", features = ["futures-core"] }
webbrowser = "0.8.12"
serde_json = "1.0.108"
flate2 = "1.0.28"
reqwest = { version = "0.11.22", optional = true }
rand = "0.8.5"
image = "0.24.7"
tempfile = "3.8.1"
slab = "0.4.9"
twox-hash = "1.6.3"
parking_lot = "0.12.1"
num_cpus = "1.16.0"
tokio-stream = "0.1.15"

[target.'cfg(unix)'.dependencies]
tokio-dbus = { version = "0.0.16", optional = true }
gio = { version = "0.18.3", optional = true }

[target.'cfg(windows)'.dependencies]
winctx = "0.0.18"

[build-dependencies]
anyhow = "1.0.75"
winres = "0.1.12"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/jpv", dest = "/usr/bin/", mode = "755" },
    { source = "desktop/se.tedro.JapaneseDictionary.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "desktop/se.tedro.JapaneseDictionary.png", dest = "/usr/share/icons/hicolor/256x256/apps/", mode = "644" },
    { source = "desktop/se.tedro.JapaneseDictionary.service", dest = "/usr/share/dbus-1/services/", mode = "644" },
    { source = "desktop/se.tedro.japanese-dictionary.plugins.gschema.xml", dest = "/usr/share/glib-2.0/schemas/", mode = "644" },
    { source = "gnome/jpv@tedro.se/*", dest = "/usr/share/gnome-shell/extensions/jpv@tedro.se/", mode = "644" },
]

[package.metadata.generate-rpm.requires]
tesseract-langpack-jpn = "*"
