[package]
name = "lib"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
arrayvec = "0.7.2"
fixed-map = { version = "0.9.2", features = ["serde"] }
log = "0.4.17"
musli = "0.0.39"
musli-storage = "0.0.39"
relative-path = "1.8.0"
serde = { version = "1.0.160", features = ["derive"] }
tracing = "0.1.37"
xmlparser = "0.13.5"
borrowme = "0.0.3"
