[package]
name = "tools"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
flate2 = "1.0.25"
clap = { version = "4.2.5", features = ["derive", "wrap_help"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
lib = { path = "../lib" }
