[package]
name = "tools"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
flate2 = "1.0.28"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
lib = { path = "../lib" }
