[package]
name = "web"
version = "0.0.0"
edition = "2021"
publish = false

[features]
embed = []

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
lib = { path = "../lib" }
anyhow = "1.0.71"
log = "0.4.17"
wasm-logger = "0.2.0"
web-sys = "0.3.61"
yew-router = "0.17.0"
serde = { version = "1.0.160", features = ["derive"] }
gloo = "0.8.0"
wasm-bindgen-futures = "0.4.34"
serde_json = "1.0.96"
url = "2.3.1"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
borrowme = "0.0.4"
