[package]
name = "web"
version = "0.0.0"
edition = "2021"
publish = false

[features]
embed = []
cli = []

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
lib = { path = "../lib" }
anyhow = "1.0.75"
log = "0.4.20"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
yew-router = "0.17.0"
serde = { version = "1.0.189", features = ["derive"] }
gloo = "0.8.1"
wasm-bindgen-futures = "0.4.37"
serde_json = "1.0.107"
url = "2.4.1"
thiserror = "1.0.49"
wasm-bindgen = "0.2.87"
borrowme = "0.0.14"
