[package]
name = "web"
edition = "2021"
publish = false

[features]
cli = []

[dependencies]
lib = { package = "jpv-lib", path = "../jpv-lib" }
yew = { version = "0.20.0", features = ["csr"] }
musli-value = "0.0.109"
musli-descriptive = "0.0.109"
anyhow = "1.0.75"
log = "0.4.20"
wasm-logger = "0.2.0"
yew-router = "0.17.0"
serde = { version = "1.0.189", features = ["derive"] }
gloo = "0.8.1"
wasm-bindgen-futures = "0.4.37"
serde_json = "1.0.107"
url = "2.4.1"
thiserror = "1.0.49"
wasm-bindgen = { version = "0.2.87", features = ["std"] }
borrowme = "0.0.14"
serde_urlencoded = "0.7.1"
slab = "0.4.9"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "WebSocket",
    "HtmlSelectElement",
    "Performance",
]
